[tool.poetry]
name = "fusion-model-implementation"
version = "0.1.0"
description = "Rapidly Build, Optimize, and Deploy SOTA AI Models"
authors = ["Yash Solanki <144127816+MagellaX@users.noreply.github.com>"]
license = "apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
